...

        // This logic allows for custom UI in the left side of the Header
        // but the backButton prop overrides any custom headerLeft component

        const leftComponent = backButton ? (
            <PressableIcon
                testID="HeaderBackButton"
                onPress={() =>
                    typeof onBackButtonPress === 'function'
                        ? onBackButtonPress()
                        : navigation.canGoBack()
                          ? navigation.goBack()
                          : navigation.navigate('TabsNavigator')
...
