...
                loading={isJoining}
            />
        </View>
    ) : (
        <View accessible={false} style={s.buttonsContainer}>
            <Button
                testID="JoinFederationButton"
                fullWidth
                title={t('phrases.join-space')}
                onPress={onJoin}
                containerStyle={s.button}
                disabled={isJoining}
                loading={isJoining}
...
